2022-11-23T16:08:08Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3533732973 # 640
* notice: last 14d: unq all: 5 5
* notice: prev accum: outdated-unq outdated-all / unq all: 35 73 / 39 77
* notice: next accum: outdated-unq outdated-all / unq all: 35 73 / 40 78
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-11-23]

2022-11-21T08:09:38Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3512563285 # 633
* notice: last 14d: unq all: 4 4
* notice: prev accum: outdated-unq outdated-all / unq all: 34 72 / 39 77
* notice: next accum: outdated-unq outdated-all / unq all: 35 73 / 39 77
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-11-07] / []

2022-11-21T00:37:59Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3510500003 # 632
* notice: last 14d: unq all: 5 5
* notice: prev accum: outdated-unq outdated-all / unq all: 34 72 / 38 76
* notice: next accum: outdated-unq outdated-all / unq all: 34 72 / 39 77
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-11-20]

2022-11-19T08:08:27Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3502697959 # 627
* notice: last 14d: unq all: 4 4
* notice: prev accum: outdated-unq outdated-all / unq all: 33 71 / 38 76
* notice: next accum: outdated-unq outdated-all / unq all: 34 72 / 38 76
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-11-05] / []

2022-11-18T16:08:26Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3498422524 # 625
* notice: last 14d: unq all: 5 5