@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-11-23T16:08:08Z",
-  "count_outdated" : 73,
-  "uniques_outdated" : 35,
+  "timestamp" : "2022-11-29T08:08:57Z",
+  "count_outdated" : 74,
+  "uniques_outdated" : 36,
   "count" : 78,
   "uniques" : 40,
   "views" : [
-    {
-      "timestamp": "2022-11-15T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-11-17T00:00:00Z",
       "count": 1,
