@@ -1,3 +1,11 @@
+2022-11-29T08:08:57Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3572169239 # 657
+* notice: last 14d: unq all: 4 4
+* notice: prev accum: outdated-unq outdated-all / unq all: 35 73 / 40 78
+* notice: next accum: outdated-unq outdated-all / unq all: 36 74 / 40 78
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-11-15] / []
+
 2022-11-23T16:08:08Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3533732973 # 640
 * notice: last 14d: unq all: 5 5
